# lnr

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
pylnr/: CMakeLists.txt  pylnr.cpp
src/: Array.h  ArrayBase.h  CMakeLists.txt  Matrix.h  MemoryPool.cpp  MemoryPool.h  Vector.h  lnr.cpp  lnr.h  main.cpp  operations.h  types.h
tests/: CMakeLists.txt  LinearTests.cpp
